fix dark mode

--- a/css/style.css
+++ b/css/style.css
@@ -50,12 +50,11 @@ h2, h3 {
 }
 
 body {
-    /* background: rgb(131,58,180);
-    background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%); */
+    background: lightgrey;
 }
 
 body.dark {
-    background-color: #121212;
+    background-color: #252525;
     color: white;
 }
 
